--- a/infra/package.json
+++ b/infra/package.json
@@ -20,7 +20,9 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "^2.232.2",
+    "@aws-cdk/aws-bedrock-alpha": "2.234.1-alpha.0",
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.800.0",
+    "aws-cdk-lib": "2.234.1",
     "constructs": "^10.0.0"
   }
 }
