--- a/infra/package.json
+++ b/infra/package.json
@@ -8,12 +8,17 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "lint:fix:unsafe": "biome check --write --unsafe .",
+    "format": "biome format --write ."
   },
   "devDependencies": {
     "@aws-crypto/sha256-js": "^5.2.0",
     "@aws-sdk/credential-provider-node": "^3.966.0",
     "@smithy/signature-v4": "^5.3.7",
+    "@biomejs/biome": "^1.9.4",
     "@types/jest": "^30",
     "@types/node": "^24.10.1",
     "aws-cdk": "2.1100.3",
