--- a/infra/package.json
+++ b/infra/package.json
@@ -16,9 +16,10 @@
   },
   "devDependencies": {
     "@aws-crypto/sha256-js": "^5.2.0",
+    "@aws-sdk/client-bedrock-agent": "^3.966.0",
     "@aws-sdk/credential-provider-node": "^3.966.0",
-    "@smithy/signature-v4": "^5.3.7",
     "@biomejs/biome": "^1.9.4",
+    "@smithy/signature-v4": "^5.3.7",
     "@types/jest": "^30",
     "@types/node": "^24.10.1",
     "aws-cdk": "2.1100.3",
